--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
         "next-images": "^1.8.2",
         "nookies": "^2.5.2",
         "react": "^16.13.0",
+        "react-confetti": "^6.1.0",
         "react-dom": "^16.13.0",
+        "react-use": "^17.5.0",
         "styled-components": "^5.0.0"
     },
     "resolutions": {
